--- a/.gitignore
+++ b/.gitignore
@@ -300,3 +300,15 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,jupyternotebooks
 
 **/desktop.ini
+/git-scripts/ant.jar
+/git-scripts/avalon-framework-4.2.0.jar
+/git-scripts/batik-all-1.7.jar
+/git-scripts/commons-io-1.3.1.jar
+/git-scripts/commons-logging-1.0.4.jar
+/git-scripts/fop.jar
+/git-scripts/jlatexmath-minimal-1.0.3.jar
+/git-scripts/jlm_cyrillic.jar
+/git-scripts/jlm_greek.jar
+/git-scripts/plantuml.jar
+/git-scripts/xml-apis-ext-1.3.04.jar
+/git-scripts/xmlgraphics-commons-1.4.jar
